welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:9: error: not found: value T
	brosse(T(decalage%getWorldHeight()))
               ^Array2:13: error: not found: value T
		brosse(T((i+decalage)%getWorldHeight()))
                       ^